@@ -1,3 +1,7 @@
+2008-02-10  Wakaba  <wakaba@suika.fam.cx>
+
+	* CSSStyleSheet.pm (manakai_input_encoding): New.
+
 2008-02-08  Wakaba  <wakaba@suika.fam.cx>
 
 	* CSSRule.pm (@media, @import ____new): Bless media object
